--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,12 @@
     <nav id="nav-bar">
       <img class="logo" src="/images/bird.png">
       <span class="header">Tweeter</span>
+      <button class='compose-new'>
+        <span>
+        <i class="fa fa-pencil-square-o" aria-hidden="true"></i>
+        Compose
+        </span>
+      </button>
     </nav>
 
     <!-- Page-specific (main) content here -->
