added sass, css files now on output.css

--- a/public/index.html
+++ b/public/index.html
@@ -5,33 +5,17 @@
     <title>Tweeter - Home Page</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <!-- External CSS -->
-    <link rel="stylesheet" href="/vendor/normalize-4.1.1.css" type="text/css" />
-
     <!-- App CSS -->
-    <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
+    <link rel="stylesheet" href="/styles/output.css" type="text/css" />
 
     <!-- Font Awesome for Icons -->
     <script src="https://use.fontawesome.com/0e3b7278b2.js"></script>
 
-    <!-- CSS for new-tweet -->
-    <link rel="stylesheet" href="/styles/new-tweet.css" type="text/css" />
-
     <!-- Font -->
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 
-    <!-- CSS for the tweets -->
-    <link rel="stylesheet" href="/styles/tweet-show.css" type="text/css" />
-
     <!-- CSS for animations -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
-
-    <!-- CSS for sweet error messages -->
-    <link rel="stylesheet" type="text/css" href="/scripts/dist/sweetalert.css">
-
-    <!-- CSS for emojis -->
-    <link href="/emoji-picker/lib/css/nanoscroller.css" rel="stylesheet">
-    <link href="/emoji-picker/lib/css/emoji.css" rel="stylesheet">
 
   </head>
 
